--- a/cost_estimate.html
+++ b/cost_estimate.html
@@ -32,7 +32,7 @@
       </ul>
     </nav>
 
-    <h4 class="make-your-selection">Please complete the required information below</h4>
+    <h4 class="titulo-pagina">Please complete the required information below</h4>
 
     <!-- COST ESTIMATE TOOL -->
     <form id="costEstimateForm" name="costEstimateForm">
