--- a/index.html
+++ b/index.html
@@ -32,33 +32,33 @@
       </ul>
     </nav>
 
-    <h4 class="make-your-selection">Please make your selection below</h4>
+    <h4 class="titulo-pagina">Please make your selection below</h4>
 
     <!-- MENU PRINCIPAL-->
     <div class="flex-container">
 
-      <div class="flex-items">
+      <div class="flex-item">
         <div class="tarjeta">
           <h5 class="titulo">Create New Profile</h5>
         </div>
-        <a href="new_profile.html"><img src="images/profile.svg" class="foto-tarjeta" alt="card-grid-image"></a>     
+        <a href="new_profile.html"><img src="images/profile.svg" class="foto-tarjeta"</a>     
       </div>
 
-      <div class="flex-items">
+      <div class="flex-item">
         <div class="tarjeta">
           <h5 class="titulo">Run Cost Estimate</h5>
         </div>
         <a href="cost_estimate.html"><img src="images/invoices.svg" class="foto-tarjeta" alt="card-grid-image"></a> 
       </div>
 
-      <div class="flex-items">
+      <div class="flex-item">
         <div class="tarjeta">
           <h5 class="titulo">Run Reports</h5>
         </div>
         <img src="images/report.svg" class="foto-tarjeta" alt="card-grid-image">
       </div>
 
-      <div class="flex-items">
+      <div class="flex-item">
         <div class="tarjeta">
           <h5 class="titulo">Database Search</h5>
         </div>
