--- a/new_profile.html
+++ b/new_profile.html
@@ -32,6 +32,8 @@
       </ul>
     </nav>
     
+    <h4 class="titulo-pagina">Create a New Immigration Profile</h4>
+
     <!-- CREATE PROFILE -->
     <form id="formProfile" name="formProfile">
         <div class="save-button">
