--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
   <body>
     <!-- BANNER -->
     <header>
-        <div class="banner">
+        <div class="banner1">
             Immigration Tools & Visa Management
         </div>
     </header>
 
     <!-- BARRA DE NAVEGACION -->
-    <nav class="barra-navegacion">      
+    <nav class="barra-navegacion1">      
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="new_profile.html">New Profile</a></li>
