--- a/cost_estimate.html
+++ b/cost_estimate.html
@@ -18,7 +18,7 @@
     <!-- BANNER -->
     <header>
         <div class="banner">
-            Immigration Tools & Visa Management
+          Immigration & Visa Management Tools
         </div>
     </header>
 
