--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- BANNER -->
     <header>
         <div class="banner1">
-            Immigration Tools & Visa Management
+            Immigration & Visa Management Tools
         </div>
     </header>
 
