--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-    rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- CSS -->
     <link rel="stylesheet" href="style.css">
 
     <title>ImmiTools</title>
@@ -65,18 +63,36 @@
         <img src="images/search.svg" class="foto-tarjeta" alt="card-grid-image">
       </div>
 
+      <div class="flex-item">
+        <div class="tarjeta">
+          <h5 class="titulo">Contact us</h5>
+        </div>
+        <a href="contact.html"><img src="images/mail.svg" class="foto-tarjeta" alt="card-grid-image"></a> 
+      </div>
+
+    </div>
+
+    <h2 class="embassymap">Embassy of the United States in Argentina</h2>
+    <div class="flex-container">
+      
+      <iframe class="google-map"
+        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13140.347055672328!2d-58.4186855!3d-34.5766711!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6e349de4b4b49a0!2sEmbassy%20of%20the%20United%20States!5e0!3m2!1sen!2sus!4v1655769725638!5m2!1sen!2sus"
+        width="500"
+        height="270"
+        style="border:0;"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </iframe>
+
     </div>
 
     <!-- FOOTER -->
-    <footer>
+    <footer class="main-footer">
         <p>Immigration & Visa Management Tools | 2022 <br>
-           Version: 1.2 (Bootstrap Actualizado)
+           Version: 1.3
         </p>
     </footer>
 
-    <!-- JS - Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
   </body>
 </html>
